remove pause job api
