# engine/pkg/openapi/apiv1.swagger.json
@@ -258,49 +258,6 @@
         ]
       }
     },
-    "/api/v1/jobs/{id}/pause": {
-      "post": {
-        "operationId": "JobManager_PauseJob",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/enginepbJob"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "pattern": "[^/]+"
-          },
-          {
-            "name": "tenant_id",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "project_id",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "JobManager"
-        ]
-      }
-    },
     "/api/v1/leader": {
       "get": {
         "operationId": "Discovery_GetLeader",
